--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "author": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development tsc && node dist/server.js",
-    "dev": "NODE_ENV=production ",
+    "start": "NODE_ENV=production tsc && node dist/server.js",
+    "dev": "NODE_ENV=development tsc && concurrently \"tsc -w \" \"nodemon dist/server.js\"",
     "tsc": "tsc",
     "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
+    "lint:fix": "eslint ./src/**/*.ts --fix",
     "prettier": "prettier ---write .",
     "test": "NODE_ENV=test"
   },
@@ -39,6 +39,6 @@
     "eslint-plugin-promise": "^6.0.0",
     "nodemon": "^2.0.22",
     "prettier": "2.8.8",
-    "typescript": "5.1.0"
+    "typescript": "5.0.4"
   }
 }
