--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "author": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production tsc && node dist/server.js",
-    "dev": "NODE_ENV=development tsc && concurrently \"tsc -w \" \"nodemon dist/server.js\"",
+    "start": "tsc && node dist/server.js",
+    "start:dev": "tsc && concurrently \"tsc -w \" \"nodemon dist/server.js\"",
+    "start:prod": "NODE_ENV=production pnpm run start",
+    "start:test": "NODE_ENV=test pnpm run start:dev",
     "tsc": "tsc",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint ./src/**/*.ts --fix",
