--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,12 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["standard", "prettier", "standard-with-typescript"],
+  "extends": [
+    "standard",
+    "prettier",
+    "standard-with-typescript",
+    "plugin:prettier/recommended"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json",
@@ -12,6 +17,7 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
+    "prettier/prettier": "error",
     "indent": ["error", 2],
     "quotes": ["error", "single"],
     "semi": ["error", "never"],
