--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "rest-server-ts",
   "version": "1.0.0",
   "description": "Proyecto de servidor utilizando NodeJS con `TypeScript` y `TypeORM` como ORM para SQL",
-  "author": "",
+  "author": "Figarillo",
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/server.js",
-    "start:dev": "tsc && concurrently \"tsc -w \" \"nodemon dist/server.js\"",
+    "start:dev": "tsc && concurrently \"tsc -w\" \"nodemon dist/server.js\"",
     "start:test": "NODE_ENV=test pnpm run start:dev",
     "lint": "eslint --ext .ts src",
     "prettier": "prettier --write \"src/**/*.ts\"",
-    "lint:fix": "eslint --ext .ts src --fix"
+    "lint:fix": "eslint --ext .ts src --fix",
+    "prepare": "husky install",
+    "ts-check": "tsc -p tsconfig.json --noEmit",
+    "pre-commit": "lint-staged",
+    "pre-check": "pnpm run ts-check && pnpm run prettier && pnpm run lint",
+    "test": ""
   },
   "keywords": [],
   "license": "ISC",
@@ -24,6 +29,8 @@
     "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "17.6.5",
+    "@commitlint/config-conventional": "17.6.5",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
@@ -36,6 +43,8 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
     "prettier": "2.8.8",
     "typescript": "5.0.4"
