--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,7 @@
     "browser": true,
     "es2021": true
   },
-  "extends": [
-    "standard",
-    "prettier",
-    "standard-with-typescript",
-    "plugin:prettier/recommended"
-  ],
+  "extends": ["standard", "prettier", "standard-with-typescript", "plugin:prettier/recommended"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json",
@@ -18,11 +13,12 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "prettier/prettier": "error",
-    "indent": ["error", 2],
+    "indent": "off",
     "quotes": ["error", "single"],
     "semi": ["error", "never"],
     "no-console": ["warn", { "allow": ["error"] }],
     "@typescript-eslint/space-before-function-paren": "off",
-    "@typescript-eslint/no-floating-promises": "off"
+    "@typescript-eslint/no-floating-promises": "off",
+    "object-curly-spacing": ["error", "always"]
   }
 }
