--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-server-ts",
+  "name": "api-server-ts",
   "version": "1.0.0",
   "description": "Proyecto de servidor utilizando NodeJS con `TypeScript` y `TypeORM` como ORM para SQL",
   "author": "Figarillo",
@@ -15,7 +15,10 @@
     "ts-check": "tsc -p tsconfig.json --noEmit",
     "pre-commit": "lint-staged",
     "pre-check": "pnpm run ts-check && pnpm run prettier && pnpm run lint",
-    "test": ""
+    "test": "",
+    "typeorm": "typeorm-ts-node-esm -d src/config/data-source.ts",
+    "migration:generate": "npm run typeorm migration:generate",
+    "migration:run": "npm run typeorm migration:run"
   },
   "keywords": [],
   "license": "ISC",
@@ -26,6 +29,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "reflect-metadata": "0.1.13",
     "typeorm": "^0.3.16",
     "typeorm-naming-strategies": "^4.1.0"
   },
@@ -48,6 +52,7 @@
     "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
     "prettier": "2.8.8",
+    "ts-node": "10.9.1",
     "typescript": "5.0.4"
   }
 }
