--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Figarillo",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node dist/server.js",
+    "start": "rm -rf dist && tsc && node dist/server.js",
     "start:dev": "tsc && concurrently \"tsc -w\" \"nodemon dist/server.js\"",
     "start:test": "NODE_ENV=test pnpm run start:dev",
     "lint": "eslint --ext .ts src",
