--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,17 @@
-PORT=
+# Server variables
+NODE_ENV=develop
+PORT=5000
+
+# Database variables
+DB_PORT=
+DB_HOST=
+DB_DATABASE=
+DB_USER=
+DB_PASSWORD=
+
+# Docker compose variables
+MYSQL_DATABASE=
+MYSQL_ROOT_USER=
+MYSQL_ROOT_PASSWORD=
+MYSQL_USER=
+MYSQL_PASSWORD=
