--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "5.0.0",
+    "bcrypt": "5.1.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
