--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
-    "@types/bcrypt": "5.0.0",
     "bcrypt": "5.1.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "9.0.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "0.1.13",
@@ -38,8 +38,10 @@
   "devDependencies": {
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
+    "@types/bcrypt": "5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "9.0.3",
     "@types/morgan": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "concurrently": "^8.1.0",
