--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "jsonwebtoken": "9.0.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "passport": "0.6.0",
+    "passport-local": "1.0.0",
     "reflect-metadata": "0.1.13",
     "typeorm": "^0.3.16",
     "typeorm-naming-strategies": "^4.1.0"
@@ -43,6 +45,8 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "9.0.3",
     "@types/morgan": "^1.9.4",
+    "@types/passport": "1.0.13",
+    "@types/passport-local": "1.0.36",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "concurrently": "^8.1.0",
     "eslint": "8.42.0",
