--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "passport": "0.6.0",
+    "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
     "reflect-metadata": "0.1.13",
     "typeorm": "^0.3.16",
@@ -46,6 +47,7 @@
     "@types/jsonwebtoken": "9.0.3",
     "@types/morgan": "^1.9.4",
     "@types/passport": "1.0.13",
+    "@types/passport-jwt": "3.0.10",
     "@types/passport-local": "1.0.36",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "concurrently": "^8.1.0",
